2003-02-18  Pavel Roskin  <proski@gnu.org>

	* util.c (list_append_unique): New function - add text to GList
	and remove duplicates.
	* main.c (directory_history_add): Use list_append_unique().
	* widget.c (push_history): Likewise.

	* panel.h: Convert directory history to GList.
	* widget.h: Convert input history to GList.
	Adjust all dependencies.

2003-02-11  Pavel Roskin  <proski@gnu.org>

	* cmd.c (edit_cmd_new): Call editor with NULL argiment, not with
	an empty string.  nvi won't save the file if invoked with an
	empty argument.
	(execute_with_vfs_arg): Don't call vfs_file_is_local() on NULL.
	Reported by Adam Byrtek <alpha@debian.org>

2003-02-04  Pavel Roskin  <proski@gnu.org>

	* cmd.c (get_random_hint): Add "force" argument to ignore
	timeout.  Adjust all dependencies.
	* main.c (load_hint): Likewise.
	* layout.c (setup_panels): Force updating the hint bar.
	Original patch by Adam Byrtek <alpha@debian.org>

2003-02-03  Pavel Roskin  <proski@gnu.org>

	* slint.c (getch): If there is EOF on the input, exit
	immediately, don't use quiet_quit_cmd().
	Reported by Steven P. Ulrick <spu@faith4miracle.org>

2003-01-28  Pavel Roskin  <proski@gnu.org>

	* util.c (name_quote): Don't quote ':', '~' and '@'.  Quote '#'
	and '~' only if it's the first character.

	* info.c (info_show_info): Cast nlink_t to int to avoid a
	warning if nlink_t is short.
	* screen.c (string_file_nlinks): Likewise.

2003-01-27  Arpi  <arpi@mplayerhq.hu>

	* key.c (is_idle): Correct maximal file descriptor and return
	value.

2003-01-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* util.h (app_text): Remove declaration - it became static.
	* util.c (get_compression_type): Cast magic to char * to
	fix compilation on AIX.
	* mountlist.c (read_filesystem_list) [MOUNTED_GETMNTENT1]:
	Check for MOUNTED is defined to fix compilation on AIX.
	Reported by Alexander Varakin <avarakin00@hotmail.com>.

2003-01-27  Pavel Roskin  <proski@gnu.org>

	* main.c (update_xterm_title_path): Use is_printable().
